syntax = "proto3";

package auth;

service AuthService {
  rpc login (loginRequest) returns (loginResponse) {}
}

message loginRequest {
  string email = 1;
  string password = 2;
}

message loginResponse {
  string accessToken = 1;
}
