syntax = "proto3";

package client;

service ClientService {
  rpc get (ClientId) returns (getClientResponse) {}
  rpc create (createClientRequest) returns (ClientId) {}
  rpc delete (ClientId) returns (recordsAffected) {}
}

message RpcEmpty {}

message ClientId {
  string id = 1;
}

message Client {
  string id = 1;
  string name = 2;
  clientType type = 3;
  string email = 4;
}

message createClientRequest {
  string name = 1;
  clientType type = 2;
  string email = 3;
  string password = 4;
}

message ClientList {
  repeated Client clients = 1;
}

enum clientType {
  entity = 0;
  individual = 1;
}

message getClientResponse {
  optional Client client = 1;
}

message recordsAffected {
  int32 affected = 1;
}
